# catkin_package_maker

./: CMakeLists.txt  Makefile  README.md  install.sh  make_catkin_pkg.sh  make_package.py  package.xml
src/: main.cpp
template/: CMakeLists.txt  README.md  package.xml  setup.py
template/launch/: project_name.launch
template/scripts/: project_name
template/src/: main.cpp
template/src/project_name/: __init__.py  main.py
